[package]
name = "pocket_news"
version = "0.1.0"
authors = ["Daniel Voogsgerd <daniel@voogsgerd.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1", features = ["full"]}
pocket = { git = "https://github.com/danielvoogsgerd/rust-pocket.git", branch="master" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "*"

chrono = "0.4"

toml = "0.5"
url = "1.0"
xdg = "*"
rss = "1.0"
reqwest = "*"

